kubectl/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: short-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: frontend
  template: 
    metadata: 
      labels:
        components: frontend
    spec:
      containers:
        - name: short-app
          image: antonlarichev/short-app
          ports:
            - containerPort: 80          
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
