kubectl/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
spec:
  type: ClusterIP
  selector:
    components: backend    
  ports:
    - protocol: TCP
      port: 3000
