kubectl/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: ClusterIP
  selector:
    components: frontend    
  ports:
    - protocol: TCP
      port: 80
