kubectl/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  type: ClusterIP
  selector:
    app: postgres  
  ports:
    - protocol: TCP
      port: 5432
